@@ -221,6 +221,10 @@ $tmp = array(
 		'type' => 'list',
 		'options' => array(
 			array(
+				'name' => 'System default',
+				'value' => '',
+			),
+			array(
 				'name' => '-1 (relative to site_url)',
 				'value' => -1,
 			),
@@ -241,7 +245,7 @@ $tmp = array(
 				'value' => 'https',
 			),
 		),
-		'value' => -1,
+		'value' => '',
 	),
 
 	'toPlaceholder' => array(
