@@ -97,6 +97,10 @@ $tmp = array(
 		'type' => 'list',
 		'options' => array(
 			array(
+				'name' => 'System default',
+				'value' => '',
+			),
+			array(
 				'name' => '-1 (relative to site_url)',
 				'value' => -1,
 			),
@@ -117,7 +121,7 @@ $tmp = array(
 				'value' => 'https',
 			),
 		),
-		'value' => -1,
+		'value' => '',
 	),
 	'useWeblinkUrl' => array(
 		'type' => 'combo-boolean',
