@@ -2,6 +2,7 @@ Changelog for pdoTools.
 
 1.10.1 pl
 ==============
+- [#112] Parameter &scheme was set to system default in all snippets.
 - [#111] [pdoPage] Added ability to set "prev" & "next" meta tags.
 
 1.10.1 pl
